kubernetes-dev.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fiuber-trips-dev
spec:
  selector:
    matchLabels:
      app: fiuber-trips-dev
  template:
    metadata:
      labels:
        app: fiuber-trips-dev
    spec:
      containers:
        - image: aiacevedo/fiuber-trips-dev
          name: fiuber-trips-dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - image: mongo:6.0.2
          name: mongodb

---
apiVersion: v1
kind: Service
metadata:
  name: fiuber-trips-dev
spec:
  type: ClusterIP
  ports:
    - name: fiuber-trips-dev
      port: 8000
  selector:
    app: fiuber-trips-dev

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  type: ClusterIP
  ports:
    - name: mongodb
      port: 27017
  selector:
    app: mongodb

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fiuber-trips-dev
  annotations:
    dev.okteto.com/generate-host: fiuber-trips-dev
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: fiuber-trips-dev
                port:
                  number: 8000
            path: /
            pathType: ImplementationSpecific
