kubernetes.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $APP_NAME
spec:
  selector:
    matchLabels:
      app: $APP_NAME
  template:
    metadata:
      labels:
        app: $APP_NAME
    spec:
      containers:
        - image: aiacevedo/$APP_NAME
          name: $APP_NAME
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - image: mongo:6.0.2
          name: mongodb

---
apiVersion: v1
kind: Service
metadata:
  name: $APP_NAME
spec:
  type: ClusterIP
  ports:
    - name: $APP_NAME
      port: 8000
  selector:
    app: $APP_NAME

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  type: ClusterIP
  ports:
    - name: mongodb
      port: 27017
  selector:
    app: mongodb

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: $APP_NAME
  annotations:
    dev.okteto.com/generate-host: $APP_NAME
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: $APP_NAME
                port:
                  number: 8000
            path: /
            pathType: ImplementationSpecific
